--- a/stripe_project/stripe_app/templates/item_details.html
+++ b/stripe_project/stripe_app/templates/item_details.html
@@ -6,19 +6,21 @@
     <h1>Item number {{ item.id }}</h1>
     <p>Description:</p>
     <p>{{ item.description }}</p>
-    <p>Price:</p>
+    <p>Full Price:</p>
     <p>{{ item.price }}</p>
     <button id="buy-button">Buy</button>
     <button id="add-to-cart-button">Add to Cart</button>
+    <button id="buy-all-button">Buy All</button>
     <script src="https://js.stripe.com/v3/"></script>
     <script type="text/javascript">
         var stripe = Stripe('{{ public_stripe_key }}');
         var buyButton = document.getElementById('buy-button');
         var addToCartButton = document.getElementById('add-to-cart-button');
+        var buyAllButton = document.getElementById('buy-all-button');
         var itemId = window.location.pathname.split('/').pop();
         console.log('Item ID:', itemId); // Проверяем значение itemId
         buyButton.addEventListener('click', function() {
-            console.log('ADD Button clicked'); // Проверяем,что работает кнопка ADD
+            console.log('ADD Button clicked'); // Проверяем,что работает кнопка
             // Create a new Checkout Session using the server-side endpoint 
             // Redirect to Stripe Session Checkout
             fetch('{% url "buy-item" item.id %}', { method: 'GET' })
@@ -29,17 +31,31 @@
               })
             .catch(error => console.error('Error:', error));
         });
+        buyAllButton.addEventListener('click', function() {
+          console.log('Buy All Button clicked'); // Проверяем,что работает кнопка
+          // Create a new Checkout Session using the server-side endpoint 
+          // Redirect to Stripe Session Checkout
+          fetch('{% url "buy-item" %}', { method: 'GET' })
+          .then(response => response.json())
+          .then(session => {
+              console.log(session);
+              stripe.redirectToCheckout({ sessionId: session.session_id });
+            })
+          .catch(error => console.error('Error:', error));
+      });
+        
         addToCartButton.addEventListener('click', function() {
             console.log('Cart Button clicked');
             fetch('{% url "add-to-cart" item.id %}', {
               method: 'POST',
+              // csrf так как method POST
               headers: {
                   'X-CSRFToken': '{{ csrf_token }}'
               }
           })
             .then(response => response.json())
             .then(data => {
-            alert(data.message); // Оповещение об успешном добавлении в корзину
+            alert(data.message); // 
         })
 
         });
